package edu.illinoistech.hawk.hwijaya.ds;

/**
 * DataStore interface representing a generic data storage mechanism for the gas pump system.
 */
public interface DataStore {}
