package edu.illinoistech.hawk.hwijaya.ds;

/**
 * DataStore implementation for Gas Pump 1.
 */
public class DataStore1 implements DataStore {
    public float tempA;
    public float tempC;
    public float cash;
    public int literCount;
    public float total;
    public float price;
    public boolean isCash;
}
