package edu.illinoistech.hawk.hwijaya.ds;

/**
 * DataStore implementation for Gas Pump 2.
 */
public class DataStore2 implements DataStore {
    public int tempA;
    public int tempB;
    public int tempP;
    public int pin;
    public int price;
    public int total;
    public int gallonCount;
    public int regularPrice;
    public int dieselPrice;
}
