classDiagram
  direction LR
  class AbstractGasPumpFactory {
    +getDataStore() DataStore
    +getStorePrices() StorePrices
    +getDisplayMenu() DisplayMenu
    +getPayMsg() PayMsg
    +getRejectMsg() RejectMsg
    +getCancelMsg() CancelMsg
    +getGasPumpedMsg() GasPumpedMsg
    +getEnterPinMsg() EnterPinMsg
    +getWrongPinMsg() WrongPinMsg
  }
  class GasPumpFactory1 {
    +getDataStore() DataStore1
    +getStorePrices() StorePrices1
    +getDisplayMenu() DisplayMenu1
    +getPayMsg() PayMsg1
    +getRejectMsg() RejectMsg1
    +getCancelMsg() CancelMsg1
    +getGasPumpedMsg() GasPumpedMsg1
    +getEnterPinMsg() EnterPinMsg1
    +getWrongPinMsg() WrongPinMsg1
  }
  class GasPumpFactory2 {
    +getDataStore() DataStore2
    +getStorePrices() StorePrices2
    +getDisplayMenu() DisplayMenu2
    +getPayMsg() PayMsg2
    +getRejectMsg() RejectMsg2
    +getCancelMsg() CancelMsg2
    +getGasPumpedMsg() GasPumpedMsg2
    +getEnterPinMsg() EnterPinMsg2
    +getWrongPinMsg() WrongPinMsg2
  }
  GasPumpFactory1 <|-- AbstractGasPumpFactory
  GasPumpFactory2 <|-- AbstractGasPumpFactory

  class DataStore {
  }
  class DataStore1 {
    +tempA : float
    +tempC : float
    +cash : float
    +total : float
    +literCount : int
    +price : float
    +isCash : boolean
  }
  class DataStore2 {
    +tempA : int
    +tempB : int
    +tempP : int
    +pin : int
    +price : int
    +total : int
    +gallonCount : int
    +regularPrice : int
    +dieselPrice : int
  }
  DataStore -- AbstractGasPumpFactory
  DataStore <|-- DataStore1
  DataStore <|-- DataStore2
